chore: 🤖 install numpy for testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.12 <3.13"
+numpy = "^1.26.1"
 
 
 [tool.poetry.group.dev.dependencies]
